fix for about page on mobile

--- a/static/styles/about.less
+++ b/static/styles/about.less
@@ -53,7 +53,7 @@
     }
 
     .about-content {
-        max-height: 60vh;
+        max-height: 80vh;
         overflow-y: scroll;
         scrollbar-width: none; /* Firefox */
         -ms-overflow-style: none; /* IE 10+ */
